# OnSET

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  all_relations_filtered.csv  test.json
backend/: .env  Dockerfile  app.py  datasetmatcher.py  eval_config.py  explorative_model.py  explorative_support.py  initiator.py  llm_query.py  llm_query_gen.py  model.py  ontology.py  pyproject.toml  redis_cache.py  requirements.txt  utils.py
backend/api/: app.py
backend/assistant/: iterative_assistant.py  model.py
backend/explorative/: exp_model.py  explorative_support.py  llm_query.py  llm_query_gen.py  topic_init.py
backend/src/: __init__.py  datasetmatcher.py  eval_config.py  initiator.py  model.py  ontology.py
backend/src/api/: app.py  config.py
backend/src/api/router/: __init__.py  classes.py  nlp_helper.py
backend/src/assistant/: iterative_assistant.py
backend/src/explorative/: exp_model.py  explorative_support.py  llm_query.py  topic_init.py
docker/: .gitignore
docker/bto-data/: .stxxl  Qleverfile  download.sh
docker/dblp-data/: Qleverfile
docker/dbpedia-data/: .stxxl  Qleverfile
docker/dbpedia-data/rdf-input/: download.sh
docker/dnb-data/: .stxxl  Qleverfile
docker/olympics-data/: Qleverfile
docker/oma-data/: .stxxl  Qleverfile  oma.meta-data.json  oma.settings.json
docker/onset-data/: .gitignore  README.md  docker-compose.yml  pgpass  servers.json  test_query.sparql
docker/onset-data/bto-data/: init.sh
docker/onset-data/pg-vec-geo/: Dockerfile  initdb-postgis.sh
docker/onset-data/qdrant/: raft_state.json
docker/onset-data/qlever-data/: Qleverfile  dbpedia.meta-data.json  dbpedia.settings.json
docker/onset-data/staging/: download.sh
docker/uniprot-data/: .stxxl  Qleverfile
docker/uniprot-data/owl/: core.owl
docker/yago-data/: Qleverfile
exploration/: all_relations.csv  all_relations_best_match.csv  classes.csv  dbpedia_test.ipynb  init_db.ipynb  llm_assistant_exploration.ipynb  llm_tool_exploration.ipynb  ontology_explore.ipynb  topic_suggestion_exploration.ipynb.ipynb
exploration/querying/: ._wordcount_selection.tex  README.md  copy_to_paper.sh  eval_config.py  init-db.ipynb  init-db.py  package-lock.json  package.json  query-eval.ipynb  query-eval.py  query-gen.ipynb  query-gen.py  query-rag.ipynb  query_gen.py  querygen.py  result-parse.ipynb  tsconfig.json
exploration/querying/examples/: fix_examples.ipynb
exploration/querying/examples_new/: fix_examples.ipynb
exploration/querying/figures/: compare_BTO_f1_score.tex  compare_BTO_f1_score_legend.tex  compare_BTO_f1_score_rel.tex  compare_BTO_f1_score_rel_legend.tex  compare_BTO_normed_ged.tex  compare_BTO_normed_ged_legend.tex  compare_DBpedia_f1_score.tex  compare_DBpedia_f1_score_legend.tex  compare_DBpedia_f1_score_rel.tex  compare_DBpedia_f1_score_rel_legend.tex  compare_DBpedia_normed_ged.tex  compare_DBpedia_normed_ged_legend.tex  compare_UniProt_f1_score.tex  compare_UniProt_f1_score_legend.tex  compare_UniProt_f1_score_rel.tex  compare_UniProt_f1_score_rel_legend.tex  compare_UniProt_normed_ged.tex  compare_UniProt_normed_ged_legend.tex  compare_Yago_f1_score.tex  compare_Yago_f1_score_legend.tex  compare_Yago_f1_score_rel.tex  compare_Yago_f1_score_rel_legend.tex  compare_Yago_normed_ged.tex  compare_Yago_normed_ged_legend.tex
exploration/querying/grammars/: erl-py.gbnf  erl.gbnf
exploration/querying/slurm/: slurm_eval_big.sh  slurm_eval_mistral.sh  slurm_eval_qwen.sh  slurm_eval_qwen_coder.sh  slurm_eval_small.sh  slurm_initdb.sh  slurm_querygen.sh
exploration/querying/sparql-llm-tools/: comparison-sparql-llama.ipynb
exploration/querying/src/: generate-grammar.ts  types-erl.ts
exploration/querying/tables/: compare_gen_query.tex  compare_model_BTO.tex  compare_model_DBpedia.tex  compare_model_DNB.tex  compare_model_UniProt.tex  compare_model_Yago.tex  compare_model_merged.tex  task_results.tex
exploration/querying/user-study/: processing.ipynb
frontend/: .env.development  .env.production  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/client.ts/: Api.ts
frontend/src/assets/: base.css  main.css
frontend/src/assets/shaders/: cylinder.frag  cylinder.vert
frontend/src/components/: Expandable.vue  OnsetBtn.vue  TopicSelector.vue
frontend/src/components/explore/: FuzzyQueryIntermediate.vue  FuzzyQueryStarter.vue  NodeLinkSelector.vue  QueryBuilder.vue  QueryResults.vue  Result.vue  ResultMinitatures.vue  ResultPlot.vue  ResultsView.vue  TopicSelector.vue
frontend/src/components/ui/: CoulourRing.vue  Expandable.vue  Loading.vue  OnsetBtn.vue  (+2 more)
frontend/src/router/: index.ts
frontend/src/utils/: BaseMap.ts  CircleMan.ts  GraphMan.ts  config.ts  helpers.ts  parsing.ts
frontend/src/views/: 3D-Circles.vue  HomeView.vue  LinkedOntology.vue  OntologyCircles.vue  OntologyExplorative.vue  OntologyGraph.vue
instructions-video/: SCRIPT.md
(+53 files in other folders)
